tests/invalid/Void_Invalid_3.whiley
import * from whiley.lang.*

void ::method():
	b = 1
	
      
void ::main(System.Console sys):
	a = method()

